--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
         <p>Suddenly struck me that that tiny pea, pretty and blue, was the Earth. I put up my thumb and shut one eye,
           and my thumb blotted out the planet Earth.</p>
 
-        <div class="btn">
+        <!-- <div class="btn">
           Sign Up
-        </div>
+        </div> -->
+        <input class="btn" type="button" onclick="location.href='signup.html';" value="Sign Up" />
       </div>
 
       <div class="walk-img">
