--- a/signup.html
+++ b/signup.html
@@ -34,12 +34,12 @@
 
         <form action="" method="get" class="form-example">
             <div class="signup-field">
-                <label for="name">Enter your name: </label>
+                <label for="name">Username: </label>
                 <input type="text" name="name" id="name" required>
             </div>
             <div class="password-field">
-                <label for="email">Enter your email: </label>
-                <input type="email" name="email" id="email" required>
+                <label for="password">Password: </label>
+                <input type="password" name="password" id="password" required>
             </div>
             <div class="submit-field">
                 <input type="submit" value="Sign Up!">
@@ -47,4 +47,8 @@
         </form>
 
     </div>
+
+    <footer>
+            <p>Copyright SpaceWalkers 2018</p>
+          </footer>
 </body>
